Un cambio mas 3

--- a/Estilos.css
+++ b/Estilos.css
@@ -1,5 +1,5 @@
 body{
-        background-color: antiquewhite;
+        background-color: rgb(252, 147, 106);
         font-weight: bold;
         color: aquamarine;
         font-size: 9px;
